<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/cselogo"
        android:contentDescription="@string/mainlogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/powered_by_kiran_anto"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#757575"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imgLogo"
        android:layout_alignStart="@+id/imgLogo"
        android:layout_marginBottom="40dp"
        android:layout_alignRight="@+id/imgLogo"
        android:layout_alignEnd="@+id/imgLogo"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true" />

</RelativeLayout>